# flaeming-code

./: .gitignore  pyproject.toml
flaeming/: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  cli.py
flaeming/flaeming/: __init__.py  config.py
flaeming/flaeming/data/: COSMOS2020.cols  COSMOS2020.filters  __init__.py  base.py  datasets.py  filters.py  images.py  info_images.yaml  spectroscopy.py  static_variables.py  tables.py
flaeming/flaeming/data/keras/: datasets.py
flaeming/flaeming/data/torch/: datasets.py
flaeming/flaeming/ml/: automl.py
flaeming/flaeming/ml/keras/: cnn.py  utils.py
flaeming/flaeming/ml/torch/: cnn.py
flaeming/flaeming/utils/: log.py
flaeming/tests/: __init__.py  test_flaeming.py
